--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
             </div>
             <!-- Modal para nuevo pago -->
 
-            @Html.Partial("../Pago/Nuevo", new inmobiliaria_AT.Models.Pago())
+           @* @Html.Partial("../Pago/Nuevo", new inmobiliaria_AT.Models.Pago())  *@
 
         </main>
     </div>
