--- a/Views/Contrato/Detalle.cshtml
+++ b/Views/Contrato/Detalle.cshtml
@@ -7,7 +7,7 @@
 
 <head>
     <div class="d-flex justify-content-between align-items-center">
-        <h4 class="mb-0">Contrato: @Model.DireccionInmueble.ToUpper()</h4>
+        <h4 class="mb-0">@Model.DireccionInmueble.ToUpper(): Contrato #@Model.Id </h4>
 
         <div class="icoEditar">
             <form action="@Url.Action("Editar", new { id = Model.Id })" method="get" style="display: inline;">
