--- a/Views/Pago/ListadoPagos.cshtml
+++ b/Views/Pago/ListadoPagos.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Lista de pagos del contrato N° @contratoId</h1>
+    <h1 class="display-4">Lista de pagos del contrato #@contratoId</h1>
 </div>
 
 <!-- Botón para agregar nuevo pago -->
